--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  background-color: black;
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
