updated css, working on about images

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -7,13 +7,31 @@ html {
       rgba(17, 16, 16, 0.678),
       rgba(12, 10, 22, 0.863));
 
-  --imp-text-color: #c770f0;
-
-  
+  --theme-charcoal: #424B54;
+  --theme-pewter-blue: #93a8ac;
+  --theme-white: #ffffff;
+  --theme-cameo-pink: #E2B4BD;
+  --theme-copper-rose: #9B6A6C;
 }
 
-.purple {
-  color: var(--imp-text-color) !important;
+.text-dark {
+  color: var(--theme-charcoal) !important;
+}
+
+.text-light {
+  color: var(--theme-pewter-blue) !important;
+}
+
+.text-white {
+  color: var(--theme-white) !important;
+}
+
+.text-pink {
+  color: var(--theme-cameo-pink) !important;
+}
+
+.text-copper {
+  color: var(--theme-copper-rose) !important;
 }
 
 button:focus {
@@ -30,7 +48,7 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #0c0513;
+  background-color: var(--theme-charcoal);
   background-image: url(../assets/preloader_pacman.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -55,18 +73,18 @@ button:focus {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #2d1950;
+  background: var(--theme-charcoal);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(178, 121, 216, 0.959);
+  background: var(--theme-copper-rose);
   border-radius: 12px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(222, 130, 235, 0.911);
+  background: var(--theme-cameo-pink);
   border-radius: 12px;
 }
 
@@ -95,7 +113,7 @@ button:focus {
 
 .navbar-toggler span {
   display: block !important;
-  background-color: #be50f4 !important;
+  background-color: var(--theme-cameo-pink) !important;
   height: 4px !important;
   width: 27px !important;
   margin-top: 5px !important;
@@ -154,11 +172,6 @@ button:focus {
   color: rgb(250, 250, 250) !important;
 }
 
-.logo {
-  height: 1.4em !important;
-  width: 2.5em !important;
-}
-
 .navbar-nav .nav-link {
   color: white !important;
   padding-right: 1rem !important;
@@ -194,7 +207,7 @@ button:focus {
   height: 5px;
   width: 0;
   border-radius: 16px;
-  background: #c95bf5;
+  background: var(--theme-cameo-pink);
   bottom: 1px;
   left: 0;
   z-index: -1;
@@ -257,19 +270,24 @@ button:focus {
 }
 
 .home-header {
-  padding-top: 80px !important;
+  padding-top: 80px;
 }
 
-/* @media (max-width: 767px) {
-  .home-content {
-    padding: 2.5rem 0 !important;
+@media (max-width: 767px) {
+  .home-header {
+    padding-top: 0px !important;
   }
-} */
+}
+
+.home-down-arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .home-section {
   position: relative;
   z-index: -1;
-  /* background-image: var(--image-gradient), url(../assets/home-bg.jpeg); */
   background-position: top center;
   background-repeat: no-repeat;
   padding-bottom: 30px !important;
@@ -282,7 +300,7 @@ button:focus {
 
 .home-content {
   padding: 9rem 0 2rem;
-  color: whitesmoke;
+  color: var(--theme-white);
   text-align: left;
 }
 
@@ -297,18 +315,18 @@ button:focus {
 }
 
 .main-name {
-  color: #cd5ff8;
+  color: var(--theme-copper-rose);
 }
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
-  color: #be6adf !important;
+  color: var(--theme-copper-rose) !important;
   font-weight: 600 !important;
 }
 
 .Typewriter__cursor {
   font-size: 2.4em !important;
-  color: #b562d6 !important;
+  color: var(--theme-copper-rose) !important;
 }
 
 @media (max-width: 767px) {
@@ -347,7 +365,7 @@ button:focus {
 }
 
 .home-about-description {
-  color: white !important;
+  color: var(--theme-white) !important;
   padding-top: 100px !important;
   padding-bottom: 20px !important;
   text-align: center;
@@ -394,7 +412,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: #68187a;
+  background: var(--theme-copper-rose);
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -402,13 +420,13 @@ button:focus {
 
 .home-social-icons:hover::before {
   transform: scale(1.1);
-  box-shadow: 0 0 15px #801f95;
+  box-shadow: 0 0 15px var(--theme-copper-rose);
 }
 
 .home-social-icons:hover {
-  color: #87209e;
-  box-shadow: 0 0 5px #87209e;
-  text-shadow: 0 0 2px #87209e;
+  color: var(--theme-copper-rose);
+  box-shadow: 0 0 5px var(--theme-copper-rose);
+  text-shadow: 0 0 2px var(--theme-cameo-pink);
 }
 
 .social-icons {
@@ -418,7 +436,7 @@ button:focus {
 }
 
 .icon-color {
-  color: #700c86 !important;
+  color: var(--theme-copper-rose) !important;
 }
 
 /* --------- */
@@ -454,7 +472,7 @@ button:focus {
 
 .footer h3 {
   font-size: 0.75em;
-  color: white !important;
+  color: var(--theme-white) !important;
   margin-top: 0.5em !important;
   margin-bottom: 0.5em !important;
 }
@@ -466,7 +484,7 @@ button:focus {
 }
 
 .blockquote-footer {
-  color: #a588c0 !important;
+  color: var(--theme-pewter-blue) !important;
 }
 
 /* --------- */
@@ -477,6 +495,7 @@ button:focus {
   padding-top: 150px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
+  background-color: var(--theme-charcoal) !important;
 }
 
 .project-card {
@@ -488,9 +507,9 @@ button:focus {
 }
 
 .project-card-view {
-  box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
-  color: white !important;
-  background-color: transparent !important;
+  box-shadow: 0 4px 5px 3px rgba(155, 106, 108, 0.459) !important;
+  color: var(--theme-dark) !important;
+  background-color: var(--theme-pewter-blue) !important;
   opacity: 0.9 !important;
   transition: all 0.5s ease 0s !important;
   height: 100% !important;
@@ -499,7 +518,7 @@ button:focus {
 .project-card-view:hover {
   transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
+  box-shadow: 0 4px 4px 5px rgba(226, 180, 189, 0.561) !important;
 }
 
 .card-img-top {
@@ -509,15 +528,15 @@ button:focus {
 }
 
 .btn-primary {
-  color: #fff !important;
-  background-color: #623686 !important;
-  border-color: #623686 !important;
+  color: var(--theme-white) !important;
+  background-color: var(--theme-copper-rose) !important;
+  border-color: var(--theme-copper-rose) !important;
 }
 
 .btn-primary:hover {
-  color: #fff !important;
-  background-color: #6d20c5d7 !important;
-  border-color: #6d20c5d7 !important;
+  color: var(--theme-white) !important;
+  background-color: #cf8a8d !important;
+  border-color: #cf8a8d !important;
 }
 
 .btn:focus {
@@ -526,10 +545,11 @@ button:focus {
 }
 
 .project-heading {
-  color: white !important;
+  color: var(--theme-white) !important;
   font-size: 2.3em !important;
   font-weight: 500 !important;
   padding-top: 10px !important;
+  text-align: center;
 }
 
 /* --------- */
@@ -541,6 +561,7 @@ button:focus {
   padding-top: 150px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
+  background-color: var(--theme-charcoal) !important;
   color: white !important;
 }
 
@@ -549,12 +570,12 @@ button:focus {
   margin: 15px !important;
   padding: 10px !important;
   opacity: 0.93 !important;
-  border: 1.7px solid rgba(200, 137, 230, 0.637) !important;
+  border: 1.7px solid rgba(155, 106, 108, 0.459) !important;
   vertical-align: middle !important;
   text-align: center !important;
   border-radius: 5px !important;
   display: table !important;
-  box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
+  box-shadow: 4px 5px 4px 3px rgba(135, 4, 168, 0.1) !important;
   overflow: hidden !important;
   transition: all 0.4s ease 0s !important;
 }
@@ -568,7 +589,7 @@ button:focus {
 .tech-icons:hover {
   transform: scale(1.05) !important;
   overflow: hidden !important;
-  border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
+  border: 2.2px solid rgba(226, 180, 189, 0.561) !important;
 }
 
 .tech-icon-images {
@@ -578,7 +599,7 @@ button:focus {
 
 .quote-card-view {
   border: none !important;
-  color: white !important;
+  color: var(--theme-white) !important;
   background-color: transparent !important;
 }
 
@@ -603,141 +624,12 @@ button:focus {
   padding-top: 110px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
-  color: white !important;
+  background-color: var(--theme-charcoal) !important;
+  color: var(--theme-white) !important;
 }
 
 .resume {
   padding-top: 50px;
   padding-bottom: 50px;
   justify-content: center;
-}
-
-.resume-left {
-  padding-right: 80px !important;
-}
-
-.resume-right {
-  padding-left: 80px !important;
-}
-
-@media (max-width: 767px) {
-  .resume-left {
-    padding-right: 15px !important;
-    padding-left: 15px !important;
-  }
-
-  .resume-right {
-    padding-right: 15px !important;
-    padding-left: 15px !important;
-  }
-}
-
-.resume .resume-title {
-  font-size: 2em;
-  font-weight: 700;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.resume .resume-item {
-  padding: 0 0 10px 25px;
-  margin-top: -2px;
-  border-left: 2px solid #8a49a8;
-  position: relative;
-}
-
-.resume .resume-item .resume-title {
-  line-height: 18px;
-  font-size: 0.9em;
-  background: #5234795d;
-  padding: 8px 15px;
-  display: inline-block;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-.resume .resume-item ul {
-  padding-left: 20px;
-  text-align: justify;
-}
-
-.resume .resume-item ul li {
-  padding-bottom: 10px;
-  list-style: none;
-}
-
-.resume .resume-item:last-child {
-  padding-bottom: 0;
-}
-
-.resume .resume-item::before {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50px;
-  left: -9px;
-  top: 0;
-  background: #fff;
-  border: 2px solid #8a49a8;
-}
-
-.like-item {
-  padding-top: 10px !important;
-  font-size: 1.1em !important;
-  font-family: sans-serif !important;
-}
-
-.like-btn {
-  background-color: #934cce5e !important;
-  border-color: #934cce5e !important;
-  padding: 0.25rem 0.98rem !important;
-  border-radius: 5px !important;
-  line-height: 1.4 !important;
-  transition: 0.3s ease !important;
-}
-
-.like-btn:hover {
-  transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
-}
-
-.animate-like {
-  animation-name: likeAnimation;
-  animation-fill-mode: forwards;
-  animation-duration: 0.85s;
-}
-
-@keyframes likeAnimation {
-  0% {
-    transform: scale(1.5);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-.fork-btn {
-  font-size: 1.1em !important;
-  padding-top: 10px !important;
-}
-
-.fork-btn-inner {
-  line-height: 1.4em !important;
-  background-color: #934cce5e !important;
-  padding: 0.25rem 1.1rem !important;
-  vertical-align: middle !important;
-  text-align: center !important;
-}
-
-.fork-btn-inner:hover {
-  transform: translateY(-2px) !important;
-  background-color: #a24dd386 !important;
-  border-color: #a24dd386 !important;
-}
-
-.fork-btn-inner::after {
-  display: none !important;
 }
