--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,9 +2,10 @@
 
 body {
   margin: 0;
-  background-color: black;
+  background-color: #424B54;
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left, rgb(27 20 41), rgb(20 15 35));
+
+  background-image: var(--section-background-color) !important;
 }
