--- a/src/style/style.css
+++ b/src/style/style.css
@@ -92,7 +92,7 @@ button:focus {
 /* Navbar Section  */
 /* --------- */
 .sticky {
-  background-color: #1b1a2ea9 !important;
+  background-color: var(--theme-dark) !important;
   transition: all 0.3s ease-out 0s !important;
   box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
   backdrop-filter: blur(15px) !important;
@@ -160,7 +160,7 @@ button:focus {
   .navbar {
     padding: 1rem 2rem !important;
     font-size: 1.4rem !important;
-    background-color: #181a27 !important;
+    background-color: #24262f !important;
   }
 
   .navbar-nav .nav-item a::after {
@@ -342,19 +342,25 @@ button:focus {
 }
 
 .myAvatar {
+  display: flex !important;
   justify-content: center !important;
   padding-top: 9em !important;
 }
 
+.myAvatar img {
+  height: 50%;
+  border-radius: 50% !important;
+}
+
 @media (max-width: 767px) {
   .myAvatar {
-    padding-top: 1em !important;
+    padding-top: 0 !important;
     padding-bottom: 1em !important;
   }
 
   .myAvatar img {
+    height: 100% !important;
     width: 50% !important;
-    height: 50% !important;
   }
 }
 
@@ -373,8 +379,16 @@ button:focus {
 
 .home-about-body {
   padding-top: 50px;
-  font-size: 1.2em !important;
+  font-size: 1.2em;
   text-align: left;
+}
+
+@media (max-width: 767px) {
+  .home-about-body {
+    padding-top: 10px !important;
+    text-align: center;
+    font-size: 1em !important;
+  }
 }
 
 .home-about-social {
@@ -566,30 +580,23 @@ button:focus {
 }
 
 .tech-icons {
-  font-size: 4.5em !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden !important;
   margin: 15px !important;
   padding: 10px !important;
+  font-size: 4.5em !important;
   opacity: 0.93 !important;
-  border: 1.7px solid rgba(155, 106, 108, 0.459) !important;
-  vertical-align: middle !important;
-  text-align: center !important;
-  border-radius: 5px !important;
-  display: table !important;
-  box-shadow: 4px 5px 4px 3px rgba(135, 4, 168, 0.1) !important;
-  overflow: hidden !important;
-  transition: all 0.4s ease 0s !important;
+  border: 2px solid rgba(155, 106, 108, 0.459) !important;
+  border-radius: 10px;
+  box-shadow: 2px 2px 2px 2px rgba(155, 106, 108, 0.05) !important;
 }
 
 @media (max-width: 767px) {
   .tech-icons {
     margin: 10px !important;
   }
-}
-
-.tech-icons:hover {
-  transform: scale(1.05) !important;
-  overflow: hidden !important;
-  border: 2.2px solid rgba(226, 180, 189, 0.561) !important;
 }
 
 .tech-icon-images {
